1、添加新的基本类型 BaseStatusEntity 此类型继承自BaseEntity，并移除BaseEntity的Status属性 2、修正OAuth2的配置

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,4 +19,15 @@ security:
     client:
       client-id: first-client
       client-secret: noonewilleverguess
+      access-token-uri: localhost:8080/oauth/token
+      user-authorization-uri: localhost:8080/oauth/authorize
     resource:
+      user-info: localhost:8080/user
+      jwt:
+        key-uri: localhost:8080/oauth/token_key
+
+global:
+  # 低内存模式
+  lowMemoryMode: false
+  # jwtAccessToken的signingKey
+  signingKey:
