--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.shishuheng.framework</groupId>
         <artifactId>cloud-framework</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.shishuheng.framework</groupId>
     <artifactId>eureka</artifactId>
@@ -14,15 +14,13 @@
     <name>eureka</name>
     <description>Demo project for Spring Boot</description>
 
+    <packaging>jar</packaging>
+
     <dependencies>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-bus</artifactId>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
