--- a/service-authentication/src/main/resources/bootstrap-dev.yml
+++ b/service-authentication/src/main/resources/bootstrap-dev.yml
@@ -1,30 +1,37 @@
 server:
-  port: 8080
+  port: 9020
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9010/eureka
 
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/web_demo?useUnicode=true&characterEncoding=utf8
     username: root
     password: root
-
   jpa:
     hibernate:
       ddl-auto: update
   redis:
     host: localhost
     timeout: 60000
+  application:
+    name: @pom.artifactId@
 
 security:
+  hostname: localhost:${server.port}
   oauth2:
     client:
       client-id: first-client
       client-secret: noonewilleverguess
-      access-token-uri: localhost:8080/oauth/token
-      user-authorization-uri: localhost:8080/oauth/authorize
+      access-token-uri: ${security.hostname}/oauth/token
+      user-authorization-uri: ${security.hostname}/oauth/authorize
     resource:
-      user-info: localhost:8080/user
+      user-info: ${security.hostname}/user
       jwt:
-        key-uri: localhost:8080/oauth/token_key
+        key-uri: ${security.hostname}/oauth/token_key
 
 global:
   # 低内存模式
