配置中心加入

--- a/eureka/src/main/resources/bootstrap-dev.yml
+++ b/eureka/src/main/resources/bootstrap-dev.yml
@@ -10,6 +10,10 @@ eureka:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
+
 spring:
   application:
     name: @pom.artifactId@
+security:
+  basic:
+    enabled: false
