--- a/service-authentication/src/main/resources/bootstrap.yml
+++ b/service-authentication/src/main/resources/bootstrap.yml
@@ -2,6 +2,13 @@ spring:
   application:
     name: @pom.artifactId@
   cloud:
+    stream:
+      kafka:
+        binder:
+          zk-nodes: localhost:2181
+          brokers: localhost:9092
+      bus:
+        enabled: true
     config:
       profile: dev
       label: master
@@ -15,3 +22,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:9010/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+#  server:
+#    port: 9020
