1、修改Service继承的基础基类 2、提出通用模块 3、加入feign

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <module>service-authentication</module>
         <module>service-gateway</module>
         <module>service-configuration</module>
+        <module>common-module</module>
+        <!-- 业务模块-->
+        <module>service-music</module>
     </modules>
 
     <properties>
