--- a/service-configuration/src/main/resources/configurations/service-music-dev.yml
+++ b/service-configuration/src/main/resources/configurations/service-music-dev.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/web_demo?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/yueji?useUnicode=true&characterEncoding=utf8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -18,14 +18,29 @@ security:
   hostname: localhost:9020
   oauth2:
     client:
+      id: ${security.oauth2.resource.id}
       client-id: client-music
       client-secret: abcdef
-      access-token-uri: ${security.hostname}/oauth/token
-      user-authorization-uri: ${security.hostname}/oauth/authorize
+      # 此处设置只是为了在获取token的时候不报错
+      scope: all
+      access-token-uri: http://${security.hostname}/oauth/token
+      user-authorization-uri: http://${security.hostname}/oauth/authorize
+      client-authentication-scheme: header
     resource:
+      id: ${spring.application.name}
       user-info: ${security.hostname}/user
       jwt:
         key-uri: ${security.hostname}/oauth/token_key
+
+ribbon:
+  readTimeout: 60000
+  connectTimeout: 60000
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 30000
+        readTimeout: 30000
 
 global:
   # 低内存模式
