--- a/service-configuration/src/main/resources/configurations/service-music-dev.yml
+++ b/service-configuration/src/main/resources/configurations/service-music-dev.yml
@@ -42,6 +42,16 @@ feign:
         connectTimeout: 30000
         readTimeout: 30000
 
+swagger:
+  basePackage: com.shishuheng.framework.music.controller
+  title: 音乐模块
+  description: 音乐模块相关的管理
+  version: 1.0
+  contact:
+    name: shishuheng
+    email: 1136313573@qq.com
+    url:
+
 global:
   # 低内存模式
   lowMemoryMode: false
