1、修正gateway包名 2、Swagger聚合(方法抄来的 gateway用的webflux swagger2还不能很好的支持) 3、其他配置修改

--- a/service-configuration/src/main/resources/configurations/service-authentication-dev.yml
+++ b/service-configuration/src/main/resources/configurations/service-authentication-dev.yml
@@ -47,6 +47,7 @@ swagger:
   title: 系统模块
   description: 系统核心部分的管理
   version: 1.0
+  termsOfServiceUrl:
   contact:
     name: shishuheng
     email: 1136313573@qq.com
