--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+        <swagger3.version>3.0.0-SNAPSHOT</swagger3.version>
     </properties>
 
     <dependencies>
@@ -72,6 +73,7 @@
             <version>1.2.62</version>
         </dependency>
 
+        <!-- swagger2-->
         <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -84,6 +86,22 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <!-- swagger3-->
+        <!-- <dependency>-->
+        <!-- <groupId>io.springfox</groupId>-->
+        <!-- <artifactId>springfox-swagger2</artifactId>-->
+        <!-- <version>${swagger3.version}</version>-->
+        <!-- </dependency>-->
+        <!-- <dependency>-->
+        <!-- <groupId>io.springfox</groupId>-->
+        <!-- <artifactId>springfox-spring-webflux</artifactId>-->
+        <!-- <version>${swagger3.version}</version>-->
+        <!-- </dependency>-->
+        <!-- <dependency>-->
+        <!-- <groupId>io.springfox</groupId>-->
+        <!-- <artifactId>springfox-swagger-ui</artifactId>-->
+        <!-- <version>${swagger3.version}</version>-->
+        <!-- </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
@@ -119,6 +137,12 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
+        </repository>
+        <!-- swagger3依赖的仓库-->
+        <repository>
+            <id>jcenter-snapshots</id>
+            <name>jcenter</name>
+            <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
         </repository>
     </repositories>
 
