logstash配置文件修正

--- a/configuration/elk/logstash/first-pipeline.conf
+++ b/configuration/elk/logstash/first-pipeline.conf
@@ -1,25 +1,33 @@
 input {
     beats {
+        # beats的端口配置
         port => "5044"
     }
 }
 
 filter {
     grok {
-;         match => { "message" => "%{COMBINEDAPACHELOG}"}
+        # 下面被注释的是APACHE日志格式
+        # match => { "message" => "%{COMBINEDAPACHELOG}"}
+        # 下面是解析自定义日志格式 解析是ruby正则表达式
         match => { "message" => "message", "^(?<timestamp>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}:\d{3}) \[(?<thread>\w*)\] (?<level>\w*)\s*(?<class>\S*) - (?<info>.*)"}
     }
     date {
         match => ["timestamp", "yyyy-MM-dd hh:mm:ss:SSS"]
     }
     geoip {
+        # 数据库文件的绝对路径
         database => "/Users/shishuheng/devkits/apps/logstash-7.6.1/geoip-data/GeoLite2-City.mmdb"
+        # ip对应的字段(自定义解析中不存在 clientip 字段，故此处的配置是不起作用的)
         source => "clientip"
     }
 }
 
 output {
     elasticsearch {
+        # 指定主机
         hosts => [ "localhost:9200" ]
+        # 指定es的索引
+        index => ["framework_logs"]
     }
 }
