--- a/service-authentication/src/main/resources/bootstrap.yml
+++ b/service-authentication/src/main/resources/bootstrap.yml
@@ -1,27 +1,8 @@
 spring:
   application:
     name: @pom.artifactId@
-  cloud:
-    stream:
-      kafka:
-        binder:
-          zk-nodes: localhost:2181
-          brokers: localhost:9092
-      bus:
-        enabled: true
-    config:
-      profile: dev
-      label: master
-      discovery:
-        enabled: true
-        service-id: service-configuration
   profiles:
-    active: dev
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:9010/eureka
+    active: docker
 
 management:
   endpoints:
