--- a/service-authentication/src/main/resources/bootstrap-docker.yml
+++ b/service-authentication/src/main/resources/bootstrap-docker.yml
@@ -3,12 +3,12 @@ spring:
     stream:
       kafka:
         binder:
-          zk-nodes: localhost:2181
-          brokers: localhost:9092
+          zk-nodes: zookeeper-app:2181
+          brokers: kafka-app:9092
       bus:
         enabled: true
     config:
-      profile: dev
+      profile: docker
       label: master
       discovery:
         enabled: true
@@ -17,4 +17,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:9010/eureka
+      defaultZone: http://eureka-app:9010/eureka
