docker相关的配置文件修正

--- a/common-module/pom.xml
+++ b/common-module/pom.xml
@@ -32,4 +32,23 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <!-- 不需要main入口方法 (感觉好像不起作用啊 以后再来查找原因)-->
+                <executions>
+                    <execution>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+                <!-- 此包可被依赖 默认不允许被依赖-->
+                <configuration>
+                    <classifier>execute</classifier>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
