--- a/service-authentication/src/main/resources/bootstrap-docker.yml
+++ b/service-authentication/src/main/resources/bootstrap-docker.yml
@@ -18,3 +18,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka-app:9010/eureka
+  instance:
+    # 使用ip
+    prefer-ip-address: true
+    # 在eureka上注册的ip地址 由于在docker compose配置文件中配置了此服务的名称是 authentication-app 故docker的网络环境中可以直接访问authentication-app
+    ip-address: authentication-app
