--- a/service-configuration/src/main/resources/configurations/service-music-docker.yml
+++ b/service-configuration/src/main/resources/configurations/service-music-docker.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://mysql-app:3306/yueji?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://172.16.0.10:3306/yueji?useUnicode=true&characterEncoding=utf8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -11,7 +11,7 @@ spring:
     hibernate:
       ddl-auto: update
   redis:
-    host: redis-app
+    host: 172.16.0.10
     timeout: 60000
 
 security:
